# ArcheCompute

./: CMakeLists.txt  README.md  build_python.sh  pyproject.toml  vcpkg.json
apps/: CMakeLists.txt  compute.cpp
benchmark/: CMakeLists.txt  benchmark_api.h  data_type_util.cpp  data_type_util.h  mad_throughput.cpp  mad_throughput.h  main.cpp  reduce.cpp
cmake/: global_options.cmake
common/: CMakeLists.txt  first_fit.cpp  first_fit.h  helpers.h  intrin.h  logging.cpp  logging.h  metal_helpers.h  pool.cpp  pool.h  spin_mutex.h  thread_safety.h
core/: CMakeLists.txt  buffer.h  device.h
cpptests/: CMakeLists.txt  test_metal.cpp  test_metallib.cpp
cuda/: CMakeLists.txt  cuda_buffer.cpp  cuda_buffer.h  cuda_device.cpp  cuda_device.h  cuda_stream.cpp  cuda_stream.h
metal/: CMakeLists.txt  metal_buffer.cpp  metal_buffer.h  metal_callback_context.cpp  metal_callback_context.h  metal_command_encoder.cpp  metal_command_encoder.h  metal_counter.cpp  metal_counter.h  metal_device.cpp  metal_device.h  metal_kernel.cpp  metal_kernel.h  metal_stage_buffer_pool.cpp  metal_stage_buffer_pool.h  metal_stream.cpp  metal_stream.h  metal_stream_objc.mm
metal/extension/: metal_debug_capture_ext.cpp  metal_debug_capture_ext.h
pytest/: main.py
pytests/: main.py
python/: CMakeLists.txt  array.cpp  device.cpp  pyproject.toml  utils.h
python/arche_compute/: __init__.py  _core.pyi
python/scikit_build_example/: __init__.py
rhi/: CMakeLists.txt  argument.h  buffer.cpp  buffer.h  command.h  command_list.cpp  command_list.h  counter.cpp  counter.h  device.h  kernel.cpp  kernel.h  map_macro.h  stream.h
rhi/extension/: debug_capture_ext.h  device_extension.h
runtime/: CMakeLists.txt  allocator.cpp  allocator.h  argument.h  array.cpp  array.h  counter.cpp  counter.h  device.cpp  device.h  dtypes.cpp  dtypes.h  kernel.cpp  kernel.h  metal.cpp  metal.h  scheduler.cpp  scheduler.h  stream.cpp  stream.h  stream_objc.mm  utils.cpp  utils.h
runtime/extension/: debug_capture_ext.cpp  debug_capture_ext.h
runtime/metal/: allocator.cpp  allocator.h  device.cpp  device.h  metal.cpp  metal.h
runtime/primitives/: reduce.cpp  reduce.h
runtime/types/: half_types.h  spatial.cpp  spatial.h
shader/: array.h  hash_grid.h  mat.h  noise.h  quat.h  rand.h  shader.metal  spatial.h  vec.h
shader.xcodeproj/: project.pbxproj
shader/builtin/: atomic.h  complex.h  mad_throughput.metal  reduce.h  reduce.metal  utils.h
shader/device/: device_types.h  group_scan.h
